# openani-dl

./: .gitignore  README.md  pyproject.toml
src/openani_dl/: __main__.py  cli.py  client.py  downloader.py  models.py  playwright_scraper.py  scraper.py
